--- a/supabase-expo-template/locales/zh.json
+++ b/supabase-expo-template/locales/zh.json
@@ -101,7 +101,9 @@
     "errors": {
       "nameRequired": "请为此验证方法提供名称",
       "noFactorSelected": "请选择一个认证设备"
-    }
+    },
+    "copyCode": "复制代码",
+    "copied": "已复制！"
   },
   "settings": {
     "title": "设置",
